# subtitleanalyzer-agent

./: .env.example  .gitignore  README.md  database.db  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/agent/: graph.py  nodes.py  state.py
app/api/: main.py
app/core/: prompts.py
app/services/: ai_word_service.py  ai_word_serviceV2.py  subtitle_service.py  word_service.py
db-history/: database-0.0.2.db  database-0.0.3.db
